 + Fixed using -/+showplaylist on commandline messing with toggle playlist
 + Fixed issue when seeking if coolplayer is paused
 + "Add files" is back
 + Improved options dialog usability (Keyboard input and tab navigation now works and in correct order)
 + Menus now have keyboard accelerators for easier navigation (underlined letters)

Version 216
 + Enhanced aoTuV vorbis support.
 + Correct the Makefile(s) there was a minor inconsistency 
   that meant that it would not build.
 + Add -Wall to the compile options so that gcc issues all warnings.
 + Modify the sources to eliminate all of the compiler warnings.
 + Update libogg to the latest version (1.1.3).
 + Provide additional vorbis libraries (latest version = 1.1.2 and the aoTuV r1 variant) 
   which can be used in place of the current version when building CoolPlayer.
 + Create Visual Studio 2005 project files and modifications.
 + Fixed several possible buffer overflows.
 + Compiled against new MS libraries.

Version 215
 + New Mad decoder 0.15.1
 + Added force of close when closing hanging CoolPlayer in network streams
 + Some minor changes

Version 214
 + Fixed loading of WinAmp plugins when not appropriate.
 + Don't use ID3v1.1 when comment is longer than 28 characters.
 + Fixed unnecesary tagging.
 + Do not tag non .mp3 files.
 + Fixed shuffle

Version 213
 - Marcus checked out... This version is a merge of his changes and several new fixes.
 + OGG files now use OGG tags (no more ID3v2 for OGG files)
 + OGG Internet streaming works!
 + Fixed "Allow only once in playlist" sometimes not working
 + Fixed calling "CLOSE" from the system menu - making the Playlist window die forever
 + Added status area to the playlist (shows tagging progress)
 + Fixed file-rename not working on files with illegal chars in them (like : and / and \)
 + Changed the WinAmp plugins loaded to be the first to try
 + All input codecs will get a chance now to play the file
 + Fix for sudden volume changes when using internal volume